# lms_api

./: .env.sample  .flake8  Dockerfile  README.md  docker-compose.yml  dump.rdb  payments_fixture.json  pyproject.toml
config/: settings.py  urls.py
courses/: models.py  pagination.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
htmlcov/: class_index.html  function_index.html  index.html  manage_py.html  status.json  z_0a16f32af9f34665_0001_initial_py.html  z_0a16f32af9f34665_0002_course_owner_lesson_owner_py.html  z_0a16f32af9f34665_0003_subscription_py.html  z_0a16f32af9f34665___init___py.html  z_1df033120bbcc412___init___py.html  z_1df033120bbcc412_csu_py.html  z_1ea838694151cac8___init___py.html  z_1ea838694151cac8_asgi_py.html  z_1ea838694151cac8_settings_py.html  z_1ea838694151cac8_urls_py.html  z_1ea838694151cac8_wsgi_py.html  z_8b562f3fe71efc7d___init___py.html  z_b0f0b7cb819bfdf1___init___py.html  z_b0f0b7cb819bfdf1_admin_py.html  z_b0f0b7cb819bfdf1_apps_py.html  z_b0f0b7cb819bfdf1_models_py.html  z_b0f0b7cb819bfdf1_pagination_py.html  z_b0f0b7cb819bfdf1_serializers_py.html  z_b0f0b7cb819bfdf1_tests_py.html  z_b0f0b7cb819bfdf1_urls_py.html  z_b0f0b7cb819bfdf1_validators_py.html  z_b0f0b7cb819bfdf1_views_py.html  z_f6c68bdc9becfc1e___init___py.html  z_f6c68bdc9becfc1e_admin_py.html  z_f6c68bdc9becfc1e_apps_py.html  z_f6c68bdc9becfc1e_models_py.html  z_f6c68bdc9becfc1e_permissions_py.html  z_f6c68bdc9becfc1e_serializers_py.html  z_f6c68bdc9becfc1e_tests_py.html  z_f6c68bdc9becfc1e_urls_py.html  z_f6c68bdc9becfc1e_views_py.html  z_fff39e3ca0aaeed4_0001_initial_py.html  (+2 more)
(+15 files in other folders)
